Added a visitor section and traversal code to the Node class.
To run a per Node algorithm, create a Visitor class,
override the run method, and perform your operations on that node.

Updated the commandLine driver for testing the new functionality.

Currently, the root project folder is created as a rootNode, and
all subfolders are created as SubNodes.

--- a/README
+++ b/README
@@ -34,7 +34,7 @@ Create the necessary project modules, files and classes.
 		
 		--	rootNode
 			# Concrete Node. Inherits from Node. Represents the root project folder.
-			# Folder contains at least: "assets","globals","sequences", and ".projectInfo".  
+			# Folder contains at least: "assets","globals","sequences"
 	
 		--	assetNode
 			# Concrete Node. Inherits from versionedNode. Represents a project asset folder.
